--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.6
 loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.1.0+1.21.5
+mod_version=1.1.0
 maven_group=theooolone.clientsidecommands
 archives_base_name=clientside-commands
 
 # Dependencies
-fabric_version=0.125.3+1.21.5
+fabric_version=0.128.2+1.21.7
